<resources>
    <string name="app_name">BLS Local Data</string>
    <string name="main_title">Local Labor Market Data</string>
    <string name="industry_heading">Industry - Sectors</string>
    <string name="metro">Metro</string>
    <string name="state">State</string>
    <string name="county">County</string>
    <string name="bar_graph">Bar Graph</string>
    <string name="line_graph">Line Graph</string>
    <string name="tabular">Tabular</string>
    <string name="national">National</string>
    <string name="home">Home</string>
    <string name="local_labor_market_data">Local Labor \nMarket Data</string>
    <string name="action_info">Info</string>
    <string name="action_search">Search</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_industries">Search Industries</string>
    <string name="search_occupations">Search Occupations</string>
    <string name="address_found">Address found</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="permission_denied_explanation">Permission was denied</string>
    <string name="permission_rationale">Accessing your location will display current location labor data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="about">About</string>
    <string name="about1">The Bureau of Labor Statistics (BLS) Local Labor Market Data app presents data on unemployment rates and employment by industry and occupation for states, metro areas, and counties. The most recent figures are presented, although the latest available data will vary by data type and geography.</string>
    <string name="about2">New England metro areas shown in this app are delineated by New England cities and towns (NECTAs).  In all other states, metropolitan areas are county-based</string>
    <string name="about3">National unemployment rate comes from the Current Population Survey (CPS), while state, metro area, and county unemployment rates come from the Local Area Unemployment Statistics (LAUS) program.</string>
    <string name="about4">National, state, and metro area employment by industry comes from the Current Employment Statistics (CES) program.</string>
    <string name="about5">County employment and wages by industry come from the Quarterly Census of Employment and Wages (QCEW) program.</string>
    <string name="about6">National, state, and metro area employment and wages by occupation come from the Occupational Employment Statistics (OES) program.</string>
    <string name="about7">The Local Labor Market Data app presents both seasonally adjusted and not seasonally adjusted data where available. Note that seasonally adjusted data are not generally available for metro areas and counties.</string>
    <string name="about8">More information on all BLS programs, and additional data, can be found at www.bls.gov\</string>
    <string name="about9_1">Find detail information from BLS about the duties, education and training, pay, job outlook, and more for
        hundreds of occupations through the CareerInfo app, available on the "</string>
    <string name="about9_2">Google Play Store</string>

    <string name="powered_by_ocio">Powered By OCIO</string>
    <string name="version_title">Version Number:</string>
    <string name="release_date_title">Release Date:</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_history">History</string>
    <string name="action_settings">Settings</string>

    <string name="glossary">Glossary</string>
    <string name="glossaryTitle1">1-month change</string>
    <string name="glossary1">The change in a data value between the current displayed month and the immediately preceding month.  Note that when viewing not seasonally adjusted data, the 1-month change may be primarily driven by seasonal factors.</string>
    <string name="glossaryTitle2">12-month change</string>
    <string name="glossary2">The change in a data value between the current displayed month and the same month in the previous calendar year.  The 12-month change value is not affected by seasonal factors.</string>
    <string name="glossaryTitle3">Metropolitan Statistical Area (MSA)</string>
    <string name="glossary3">A large population nucleus, together with adjacent communities which have a high degree of economic and social integration with that nucleus. These communities are defined by the Office of Management and Budget as a standard for federal agencies in the preparation and publication of statistics relating to metropolitan areas.</string>
    <string name="glossaryTitle4">N/A</string>
    <string name="glossary4">Data not available.  This may result when data cannot be released due to data confidentiality or quality concerns or when a data element is not produced, due to changes in classifications or other survey changes.  Data are also not available on a seasonally adjusted basis for some data elements.</string>
    <string name="glossaryTitle5">ND</string>
    <string name="glossary5">Non-disclosed. Data do not meet BLS or State agency disclosure standards</string>
    <string name="glossaryTitle6">Seasonally adjusted</string>
    <string name="glossary6">Seasonal adjustment removes the effects of events that follow a more or less regular pattern each year. These adjustments make it easier to observe the cyclical and other nonseasonal movements in a data series.  Only certain data elements are available on a seasonally adjusted basis; when only not seasonally adjusted data are available, the app will display N/A for a data value when seasonally adjusted is selected.</string>
    <string name="glossaryTitle7">Unemployment rate</string>
    <string name="glossary7">The unemployment rate represents the number of unemployed (persons who had no employment, were available for work, and had made specific efforts to find employment) as a percent of the labor force (all persons employed and unemployed).</string>

    <string name="local_area">Local Data</string>
    <string name="national_area">National Data</string>
    <string name="state_area">State Data</string>
    <string name="metro_area">Metro Data</string>
    <string name="county_area">County Data</string>
    <string name="seasonally_adjusted">Seasonally Adjusted</string>
    <string name="not_seasonally_adjusted">Not Seasonally Adjusted</string>

    <string name="unemployment_rate">Unemployment Rate</string>
    <string name="industry_employment">Industry Employment</string>
    <string name="occupational_employment_wages">Occupational Employment &amp; Wages</string>
    <string name="employment_wages">Employment &amp; Wages</string>
    <string name="ownership_private">Private</string>
    <string name="ownership_federal_govt">Federal Government</string>
    <string name="ownership_state_govt">State Government</string>
    <string name="ownership_local_govt">Local Government</string>
    <string name="ownership_total_covered">Total</string>
    <string name="industries_title">Industry</string>
    <string name="industries_title_code">Industry (Code)</string>
    <string name="occupation_title">Occupation</string>
    <string name="occupations_title">Occupations</string>
    <string name="occupation_title_code">Occupation (Code)</string>

    <string name="employment_level">Employment Level</string>
    <string name="mean_annual_wage">Mean Annual Wage</string>
    <string name="net_change">Net Change</string>
    <string name="one_month_change">1 Month Change</string>
    <string name="twelve_month_change">12 Month Change</string>
    <string name="average_weekly_wage">Avg Weekly Wage</string>
    <string name="average_weekly_wage_accessible">Average Weekly Wage</string>
    <string name="county_not_in_metro">This county is not a part of a Metropolitan Statistical Area.</string>
    <string name="loading_reports">Loading Reports</string>
    <string name="loading_seasonally_adjusted_reports">Loading Seasonally Adjusted Reports</string>
    <string name="loading_not_seasonally_adjusted_reports">Loading Not Seasonally Adjusted Reports</string>
    <string name="found_n_results">Found %1$d results</string>
    <string name="found_current_location_results">Found one result %s</string>
    <string name="results_sorted">sorted %s</string>
    <string name="alphabet_selector_hint">Table Index</string>
    <string name="no_results_found">No Results Found</string>
    <string name="code">Code</string>
    <string name="code_paren">(Code)</string>
    <string name="employment_level_000s">Employment Level \n(in thousands)</string>
    <string name="more_details"> more details</string>
    <string name="ndValue">ND</string>
    <string name="ndAccessible">Data Not Disclosable</string>
    <string name="naAccessible">Data Not Available</string>
    <string name="level">Level</string>
    <string name="qcew_item_accessibility">%s . Value for Region %s a change over 12 months of %s which is %s.  Value for National %s a change over 12 months of %s which is %s. %s</string>
    <string name="ces_item_accessibility">%s . Value was %s . A change over 1 month of %s which is %s.  Over 12 months there was a change of %s which is %s. %s</string>
    <string name="base_item_accessibility">%s . Value for region was %s . Value nationally was %s. %s</string>
    <string name="base_no_region_item_accessibility">%s . Value nationally was %s. %s</string>
    <string name="s_qcew_item_accessibility">Industry Code %s . Employment Level for County %s a change over 12 months of %s which is %s changed.  Employment Level for National %s a change over 12 months of %s which is %s changed.</string>
    <string name="s_ces_item_accessibility">Industry Code %s . Employment Level in thousands was %s . A change over 1 month of %s in thousands which is %s changed.  Over 12 months there was a change of %s in thousands which is %s changed.</string>
    <string name="s_base_item_accessibility">Industry Code %s . Employment Level in region was %s . Employment Level nationally was %s.</string>
    <string name="more_details_available">More Details Available</string>
    <string name="ascending">ascending</string>
    <string name="descending">descending</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="county_data">County Data"</string>
    <string name="state_data">State Data</string>
    <string name="metro_data">Metro Data</string>
    <string name="history_unemployment_rate">"History - Unemployment Rate"</string>
    <string name="previous_chart_button">Previous Month Data</string>
    <string name="next_chart_button">Next Month Data</string>
    <string name="rate_axis_label">Rate Y Axis Label</string>
    <string name="month_year_axis_label">Month and Year X Axis Label</string>
    <string name="bar_chart">Bar Chart</string>
</resources>
