<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.area.fragments.HistoryLineGraphFragment">

    <TextView
        android:id="@+id/yAxisLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Rate"
        android:contentDescription="@string/rate_axis_label"
        style="@style/graphLabel"
        app:layout_constraintTop_toBottomOf="@+id/graphTypeRadioGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/line_graph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yAxisLabel"
        app:layout_constraintBottom_toTopOf="@id/xAxisLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/previous_chart_button"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="@+id/barChart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/ic_baseline_chevron_left_24px" />

    <TextView
        android:id="@+id/xAxisLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/month_year_axis_label"
        android:text="Month and Year"
        style="@style/graphLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/previousButton"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"/>

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/next_chart_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/lineChart"
        app:srcCompat="@drawable/ic_baseline_chevron_right_24px" />

</android.support.constraint.ConstraintLayout>