<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.area.AreaHeaderFragment">


    <Switch
        android:id="@+id/seasonallyAdjustedSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/seasonally_adjusted"
        app:layout_constraintBottom_toTopOf="@+id/leftButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leftButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_left_arrow_up"
        android:drawableLeft="@drawable/ic_left_arrow_up"
        android:text="@string/state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seasonallyAdjustedSwitch" />

    <Button
        android:id="@+id/rightButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableRight="@drawable/ic_right_arrow_up"
        android:text="@string/county"
        app:layout_constraintBottom_toBottomOf="@+id/leftButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/leftButton"
        android:drawableEnd="@drawable/ic_right_arrow_up"
        android:nextFocusForward="@id/areaTitleTextView"/>

    <TextView
        android:id="@+id/areaTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rightButton"
        app:layout_constraintStart_toStartOf="@+id/leftButton"
        app:layout_constraintTop_toBottomOf="@+id/leftButton" />


</android.support.constraint.ConstraintLayout>