<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/graphAreaTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chartSeasonallyAdjustedSwitch"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/chartSeasonallyAdjustedSwitch"
        style="@style/SwitchCompatTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/seasonally_adjusted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/localLegendColor"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="120dp"
        android:background="@color/colorLocalGraphBar"
        app:layout_constraintTop_toBottomOf="@+id/chartSeasonallyAdjustedSwitch"
        app:layout_constraintEnd_toStartOf="@+id/graphTypeRadioGroup" />

    <TextView
        android:id="@+id/localLegendName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="County Data"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@+id/chartSeasonallyAdjustedSwitch"
        app:layout_constraintStart_toEndOf="@+id/localLegendColor" />

    <View
        android:id="@+id/nationalLegendColor"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="120dp"
        android:background="@color/colorNationalGraphBar"
        app:layout_constraintTop_toBottomOf="@+id/chartSeasonallyAdjustedSwitch"
        app:layout_constraintEnd_toStartOf="@+id/graphTypeRadioGroup" />

    <TextView
        android:id="@+id/nationalLegendName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="38dp"
        android:text="National Data"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@+id/chartSeasonallyAdjustedSwitch"
        app:layout_constraintStart_toEndOf="@+id/nationalLegendColor" />

    <RadioGroup
        android:id="@+id/graphTypeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border"
        android:checkedButton="@+id/metroRadioButton"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chartSeasonallyAdjustedSwitch">

        <RadioButton
            android:id="@+id/lineGraphRadioButton"
            style="@style/SegmentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/line_graph"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/barChartRadioButton"
            style="@style/SegmentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/bar_graph"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/tableViewRadioButton"
            style="@style/SegmentRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:text="@string/tabular"
            android:textAlignment="center" />
    </RadioGroup>


    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/graphTypeRadioGroup">
    </FrameLayout>

    <TextView
        android:id="@+id/tableAreaTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toBottomOf="@+id/graphTypeRadioGroup"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
